<resources>
    <string name="app_name">E-Manager</string>
    <string name="codesc_bg">Background Aplikasi</string>
    <string name="codesc_btn">Button</string>
    <string name="start">start</string>
    <string name="textview">TextView</string>
    <string name="e_m">E-M</string>
    <string name="tambah_harga_barang">Tambah Harga Barang</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="harga_barang">Harga Barang</string>
    <string name="satuan">Satuan</string>
    <string name="submit">Submit</string>
    <string name="e_manager">E-Manager</string>
    <string name="ubah_harga">Ubah Harga</string>
    <string name="hapus_mahasiswa">Hapus Mahasiswa</string>
    <string name="edit_harga">edit harga</string>
    <string name="hitung">hitung</string>
    <string name="tambah_barang">tambah barang</string>
    <string name="total_belanjaan_anda_adalah_sebesar">Total Belanjaan anda adalah sebesar</string>
    <string name="kembali">KEMBALI</string>
    <string name="rp_30_000">Rp. 30.000</string>


</resources>