<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF9F9">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="276dp"
            android:layout_height="70dp"
            android:layout_marginStart="67dp"
            android:layout_marginTop="66dp"
            android:layout_marginEnd="67dp"
            android:text="@string/total_belanjaan_anda_adalah_sebesar"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.867" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="300dp"
            android:layout_height="69dp"
            android:layout_marginStart="92dp"
            android:layout_marginEnd="92dp"
            android:layout_marginBottom="420dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/rp_30_000"
            android:textAlignment="center"
            android:textSize="38sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonbck"
            android:layout_width="115dp"
            android:layout_height="54dp"
            android:layout_marginStart="160dp"
            android:layout_marginEnd="160dp"
            android:layout_marginBottom="320dp"
            android:background="#000000"
            android:text="@string/kembali"
            android:textColor="#000000"
            app:backgroundTint="#E6DADA"
            app:iconTint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="#000000"
            app:strokeColor="#090909"
            tools:text="Kembali" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>